fix white space on right/pics/colors/adjustments

--- a/src/App.css
+++ b/src/App.css
@@ -13,4 +13,5 @@ body, html {
   margin: 0;
   padding: 0;
   overflow-x: clip;
+  overflow-y: clip;
 }
